--- a/Boot-Employees REST API2/pom.xml
+++ b/Boot-Employees REST API2/pom.xml
@@ -5,14 +5,14 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.4.4</version>
+		<version>3.4.5</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.example</groupId>
 	<artifactId>myapp</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<!--<packaging>jar</packaging> -->
-	<packaging>war</packaging>
+	<packaging>jar</packaging>
 	<name>myapp</name>
 	<description>SpringBook_Chapter11_RESTful(Boot-Employees REST API)</description>
 	<url/>
@@ -51,7 +51,7 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-tomcat</artifactId>
-			<scope>provided</scope>
+<!--			<scope>provided</scope>-->
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -103,13 +103,11 @@
 	<dependency>
 	    <groupId>jakarta.servlet.jsp.jstl</groupId>
 	    <artifactId>jakarta.servlet.jsp.jstl-api</artifactId>
-	    <version>3.0.0</version>
 	</dependency>
 	
 	<dependency>
 	    <groupId>org.glassfish.web</groupId>
 	    <artifactId>jakarta.servlet.jsp.jstl</artifactId>
-	    <version>3.0.1</version>
 	</dependency>
 	
 	<dependency><!--20250502-->
@@ -119,13 +117,6 @@
 	  <scope>provided</scope>
 	</dependency>
 	
-	<dependency>
-    <groupId>com.oreilly.servlet</groupId>
-    <artifactId>cos</artifactId>
-    <version>20.12</version>
-</dependency>
-
-
 	</dependencies>
 
 	<build>
