--- a/Boot-Employees REST API/src/main/resources/application.properties
+++ b/Boot-Employees REST API/src/main/resources/application.properties
@@ -11,8 +11,14 @@ mybatis.mapper-locations=classpath:/mapper/**/*.xml
 #20250424 추가 
 spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
+spring.mvc.static-path-pattern=/static/**
+spring.resources.static-locations=classpath:/static/
 spring.web.resources.add-mappings=true
 spring.web.resources.static-locations=classpath:/static/
 spring.http.encoding.charset=UTF-8
 spring.http.encoding.enabled=true
 spring.http.encoding.force=true
+
+spring.servlet.multipart.location=C:/upload
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
