한개 이미지 업로드

--- a/Boot-Employees REST API/src/main/resources/application.properties
+++ b/Boot-Employees REST API/src/main/resources/application.properties
@@ -11,6 +11,7 @@ mybatis.mapper-locations=classpath:/mapper/**/*.xml
 #20250424 추가 
 spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
+spring.mvc.throw-exception-if-no-handler-found=true
 spring.mvc.static-path-pattern=/static/**
 spring.resources.static-locations=classpath:/static/
 spring.web.resources.add-mappings=true
