--- a/Boot-Employees REST API/src/main/resources/application.properties
+++ b/Boot-Employees REST API/src/main/resources/application.properties
@@ -1,25 +1,51 @@
+# --------------------
+# [서버 포트 설정]
+# --------------------
 server.port=8080
 
+# --------------------
+# [데이터베이스 연결 설정 - Oracle]
+# --------------------
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
 spring.datasource.username=hr
 spring.datasource.password=hr
 
+# --------------------
+# [MyBatis 설정]
+# --------------------
 mybatis.type-aliases-package=com.example.myapp.model
 mybatis.mapper-locations=classpath:/mapper/**/*.xml
 
-#20250424 추가 
+# --------------------
+# [JSP 뷰 리졸버 설정]
+# --------------------
 spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
-spring.mvc.throw-exception-if-no-handler-found=true
-spring.mvc.static-path-pattern=/static/**
-spring.resources.static-locations=classpath:/static/
+
+# --------------------
+# [정적 리소스 설정 (예: /static/js, /static/css)]
+# --------------------
 spring.web.resources.add-mappings=true
 spring.web.resources.static-locations=classpath:/static/
+#spring.mvc.static-path-pattern=/static/**
+
+# --------------------
+# [예외 처리 설정 - 404 시 핸들러 없음 예외 발생]
+# --------------------
+spring.mvc.throw-exception-if-no-handler-found=true
+
+# --------------------
+# [파일 업로드 설정]
+# --------------------
+spring.servlet.multipart.location=C:/upload
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+
+# --------------------
+# [인코딩 설정]
+# --------------------
 spring.http.encoding.charset=UTF-8
 spring.http.encoding.enabled=true
 spring.http.encoding.force=true
 
-spring.servlet.multipart.location=C:/upload
-spring.servlet.multipart.max-file-size=10MB
-spring.servlet.multipart.max-request-size=10MB
