--- a/Boot-Employees REST API2/src/main/resources/application.properties
+++ b/Boot-Employees REST API2/src/main/resources/application.properties
@@ -16,3 +16,6 @@ spring.web.resources.static-locations=classpath:/static/
 spring.http.encoding.charset=UTF-8
 spring.http.encoding.enabled=true
 spring.http.encoding.force=true
+
+spring.mvc.throw-exception-if-no-handler-found=true
+
