file을 DB에 업로드 처리

--- a/Boot-Employees REST API/src/main/resources/application.properties
+++ b/Boot-Employees REST API/src/main/resources/application.properties
@@ -11,6 +11,8 @@ spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
 spring.datasource.username=hr
 spring.datasource.password=hr
 
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.show-sql=true
 # --------------------
 # [MyBatis 설정]
 # --------------------
@@ -48,4 +50,9 @@ spring.servlet.multipart.max-request-size=10MB
 spring.http.encoding.charset=UTF-8
 spring.http.encoding.enabled=true
 spring.http.encoding.force=true
+
+debug=true
+spring.jpa.properties.hibernate.format_sql=true
+
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.cassandra.CassandraAutoConfiguration
 
