--- a/Boot-Employees REST API/pom.xml
+++ b/Boot-Employees REST API/pom.xml
@@ -79,12 +79,23 @@
 			<scope>runtime</scope>
 		</dependency>
 		<dependency>
+       		<groupId>org.springframework.boot</groupId>
+	        <artifactId>spring-boot-starter-data-jpa</artifactId>
+	    </dependency>
+	    <dependency>
+	        <groupId>org.springframework.boot</groupId>
+	        <artifactId>spring-boot-starter-web</artifactId>
+	    </dependency>
+		<dependency>
 			<groupId>org.mybatis.spring.boot</groupId>
 			<artifactId>mybatis-spring-boot-starter-test</artifactId>
 			<version>3.0.4</version>
 			<scope>test</scope>
 		</dependency>
-		
+		<dependency>
+		    <groupId>org.springframework.boot</groupId>
+		    <artifactId>spring-boot-starter-data-cassandra</artifactId>
+		</dependency>
 		<!-- JSP 엔진 -->
     <dependency>
         <groupId>org.apache.tomcat.embed</groupId>
