--- a/Boot-Employees REST API/src/main/resources/application.properties
+++ b/Boot-Employees REST API/src/main/resources/application.properties
@@ -40,9 +40,12 @@ spring.mvc.throw-exception-if-no-handler-found=true
 # --------------------
 # [파일 업로드 설정]
 # --------------------
-spring.servlet.multipart.location=C:/upload
+#spring.servlet.multipart.location=C:/upload
+spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
+#추가 20250504
+file.upload-dir=src/main/resources/static/uploads
 
 # --------------------
 # [인코딩 설정]
