--- a/Boot-Employees REST API3/src/main/resources/application.properties
+++ b/Boot-Employees REST API3/src/main/resources/application.properties
@@ -18,6 +18,7 @@ spring.jpa.show-sql=true
 # --------------------
 mybatis.type-aliases-package=com.example.myapp.model
 mybatis.mapper-locations=classpath:/mapper/**/*.xml
+mybatis.configuration.jdbc-type-for-null=VARCHAR
 
 # --------------------
 # [JSP 뷰 리졸버 설정]
