--- a/Boot-Employees REST API4/pom.xml
+++ b/Boot-Employees REST API4/pom.xml
@@ -148,6 +148,23 @@
 	    <artifactId>commons-io</artifactId>
 	    <version>2.13.0</version>
 	</dependency>
+	<!-- 20250509 엑셀로 상품업로드 기능 추가-->
+	<dependency>	
+	    <groupId>org.apache.poi</groupId>
+	    <artifactId>poi</artifactId>
+	    <version>5.2.3</version>
+	</dependency>
+	<dependency>
+	    <groupId>org.apache.poi</groupId>
+	    <artifactId>poi-ooxml</artifactId>
+	    <version>5.2.3</version>
+	</dependency>
+	
+	<dependency>
+	    <groupId>org.imgscalr</groupId>
+	    <artifactId>imgscalr-lib</artifactId>
+	    <version>4.2</version>
+	</dependency>
 	</dependencies>
 
 	<build>
