--- a/Boot-Employees REST API4/src/main/resources/application.properties
+++ b/Boot-Employees REST API4/src/main/resources/application.properties
@@ -32,6 +32,7 @@ spring.mvc.view.suffix=.jsp
 spring.web.resources.add-mappings=true
 spring.web.resources.static-locations=classpath:/static/
 #spring.mvc.static-path-pattern=/static/**
+#spring.web.resources.static-locations=classpath:/static/
 
 
 # --------------------
