20250512_상품등록 다국어 처리

--- a/Boot-Employees REST API5/src/main/resources/application.properties
+++ b/Boot-Employees REST API5/src/main/resources/application.properties
@@ -62,3 +62,20 @@ spring.jpa.properties.hibernate.format_sql=true
 
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.cassandra.CassandraAutoConfiguration
 
+# ------------------------
+# [다국어 처리 설정] 20250512
+# ------------------------
+
+spring.web.locale=ko
+spring.messages.basename=messages
+spring.messages.encoding=UTF-8
+
+# 로그 레벨 설정
+logging.level.com.example.filter=DEBUG
+
+# 로그 파일 경로 및 이름
+logging.file.name=logs/app-log.log
+logging.file.max-size=10MB
+logging.file.max-history=10
+
+
