--- a/Boot-Employees REST API5/src/main/resources/application.properties
+++ b/Boot-Employees REST API5/src/main/resources/application.properties
@@ -16,9 +16,39 @@ spring.jpa.show-sql=true
 # --------------------
 # [MyBatis 설정]
 # --------------------
-mybatis.type-aliases-package=com.example.myapp.model
-mybatis.mapper-locations=classpath:/mapper/**/*.xml
-mybatis.configuration.jdbc-type-for-null=VARCHAR
+# ✅ Oracle DataSource
+spring.datasource.oracle.driver-class-name=oracle.jdbc.OracleDriver
+spring.datasource.oracle.url=jdbc:oracle:thin:@localhost:1521:xe
+spring.datasource.oracle.username=hr
+spring.datasource.oracle.password=hr
+
+# ✅ MySQL DataSource (회원 관리용)
+spring.datasource.mysql.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.mysql.url=jdbc:mysql://localhost:3306/basicjsp?serverTimezone=Asia/Seoul
+spring.datasource.mysql.username=jspid
+spring.datasource.mysql.password=jsppass
+
+#spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.orm.jpa.HibernateJpaAutoConfiguration
+
+#mybatis.config-location=classpath:mybatis-config.xml
+#mybatis.mapper-locations=classpath:/mapper/oracle/**/*.xml
+#mybatis.config-location=
+#mybatis.mapper-locations=
+mybatis.type-aliases-package=com.example.myapp.model.oracle
+
+mybatis.mysql.mapper-locations=classpath:/mapper/mysql/**/*.xml
+mybatis.mysql.type-aliases-package=com.example.myapp.mysql.model
+
+mybatis.oracle.mapper-locations=classpath:/mapper/oracle/**/*.xml
+mybatis.oracle.type-aliases-package=com.example.myapp.oracle.model
+# MyBatis 설정
+#mybatis.mapper-locations=classpath:/mapper/**/*.xml
+#mybatis.type-aliases-package=com.example.myapp.model
+
+
+#mybatis.type-aliases-package=com.example.myapp.model
+#mybatis.mapper-locations=classpath:/mapper/**/*.xml
+#mybatis.configuration.jdbc-type-for-null=VARCHAR
 
 # --------------------
 # [JSP 뷰 리졸버 설정]
@@ -78,5 +108,6 @@ logging.file.name=logs/app-log.log
 logging.file.max-size=10MB
 logging.file.max-history=10
 
-
+#spring.mvc.view.prefix=/WEB-INF/views/
+#spring.mvc.view.suffix=.jsp
 
